# transcript-saver-mcp

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
src/transcript_saver_mcp/: __init__.py  __main__.py  server.py
