[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-saver-mcp"
version = "0.1.0"
description = "MCP server for saving conversation transcripts to timestamped markdown files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.9",
]

[project.scripts]
transcript-saver-mcp = "transcript_saver_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
